--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "emailjs-com": "^3.2.0",
     "mailgun-js": "^0.22.0",
     "router": "^1.3.8",
+    "sass": "^1.71.1",
+    "sass-loader": "^12.6.0",
     "stream": "^0.0.2",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1"
