--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "mailgun-js": "^0.22.0",
     "router": "^1.3.8",
